#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "video-pipeline"
version = "0.3.0"
repository = "https://github.com/atolab/zenoh-flow-examples"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@zettascale.tech>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh Flow Examples"
readme = "README.md"

[dependencies]
async-std = { version = "=1.11.0", features = ["attributes","unstable"] }
zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master" }
# zenoh-flow = { path = "/home/circle/Repos/cv-test/video-pipeline/zenoh-flow/zenoh-flow" }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", rev = "45b7ad70bddf45dfcdcae80e9c9a7680c70ac289" }
# zenoh-flow-example-types = { path = "../zenoh-flow-example-types" }
serde = { version = "1.0.147", features = ["derive"] }
typetag = "0.1"
bincode = "1"
async-ctrlc ={version = "1.2.0", features = ["stream"]}
async-trait = "0.1.58"
futures = "0.3.25"
rand = "0.8.5"
uhlc = "0.4"
env_logger = "0.9"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
opencv = "0.53.2"
